--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 		      "Peter Pan: hey Wendy don't ever grow up come with me <br>Wendy: okay <br>Peter Pan: I need you to mother like 30 boys for me"
 		      "nobody understands my Guinness"
 		      "that's what big jerky wants me to think"
-		      "&ldquo;I&rsquo;m so sorry I didn't appreciate what I had well it was here. I love you so much and without you it&rsquo;s like I can&rsquo;t breathe. I&rsquo;ll do more in the future to never take you for granted because now that you&rsquo;re gone I know what I&rsquo;m losing&rdquo; <br>-me when I get a stuffy nose"
 		      "I'll have you know that it takes me a lot of self restrain to not purposely text people incredibly bizarre things before claiming I got the number mixed up"
 		      "Step 1: ??? <br>Step 2: ??? <br>Step 3: Profit"
 		      "what's in your garage feels like kind of a loaded question"
@@ -25,7 +24,7 @@
 		      "people are too quick to pigeonhole themselves"
 		      "my cat could learn a lot from me"
 		      "yogurt"
-		      "why is it called &ldquo;wall street&rdquo;? <br>it can't be a wall and also a street?"
+		      "why is it called &ldquo;wall street&rdquo;? it can't be a wall and also a street?"
 		      "I'm standing in an art museum does that make me art?"
 		      "alien species feel the miss Universe pageant is rigged"
 		      "prey tell, why bog down the conceptual purity of mac and cheese?"
@@ -36,7 +35,7 @@
 		      "I don't think the world hates you any more than anyone else, dude"
 		      "Costco"
 		      "I am as to metaphor cheese as metaphor cheese is to transitive crackers"
-		      "Evil zinc ray or something-inator. <b>Big Laundry.</b>"
+		      "Evil zinc ray or something-inator. <u>Big Laundry.</u>"
 		      "Spiders are everywhere! Everywhere until I've had my morning coffee!"
 		      "you obviously don't know me, nobody does, and if they did I'd just deny it"
 		      "you can't spell subgenera without letters"
