--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		      "Peter Pan: hey Wendy don't ever grow up come with me <br>Wendy: okay <br>Peter Pan: I need you to mother like 30 boys for me",
 		      "nobody understands my Guinness",
 		      "that's what big jerky wants me to think",
-		      "&ldquo;I'm so sorry I didn't appreciate what I had well it was here. I love you so much and without you it's like I can't breathe. I'll do more in the future to never take you for granted because now that you're gone I know what I'm losing&rdquo; -me when I get a stuffy nose",
+		      "&ldquo;I'm so sorry I didn't appreciate what I had well it was here. I love you so much and without you it's like I can't breathe. I'll do more in the future to never take you for granted because now that you're gone I know what I'm losing&rdquo; <br>-me when I get a stuffy nose",
 		      "I'll have you know that it takes me a lot of self restrain to not purposely text people incredibly bizarre things before claiming I got the number mixed up",
 		      "Step 1: ??? <br>Step 2: ??? <br>Step 3: Profit",
 		      "what's in your garage feels like kind of a loaded question",
