--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 		      "&quot;I haven't been myself these past couple weeks&quot; Oh gee wiz bud I got news some dorks been walking around in your body the past two weeks.",
 		      "◞",
 		      "maybe if we overthink it hard enough it'll come full circle and we'll have thought about it just the right amount",
-		      "If you can't handle me at my best and you don't deserve me at my worst",
+		      "If you can't handle me at my best then you don't deserve me at my worst",
 		      "how disappointed I was to discover that we are no longer on speaking terms",
 		      "As someone who has eaten bad food before I can say with experience that this food is not very good",
 		      "There's more than one answer doesn't mean there ain't more than one wrong answer too",
