--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -2,8 +2,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>What is art?</title>
-	<link rel="stylesheet" href="https://indestructibletype-fonthosting.github.io/renner.css" type="text/css" charset="utf-8" />
+	<title>What is art to you?</title>
+	<style>
+		@font-face {
+		    font-family: 'bodoni';
+		    src: url('https://ewonrael.github.io/whatisarttoyou/Bodoni.ttf') format('ttf');
+		    font-weight: normal;
+		    font-style: normal;
+
+		}
+		h2 {
+			font-family: "bodoni"; 
+		}
+	</style>
   </head>
   <body>
     <h2>What is art?</h2>
