--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -6,7 +6,7 @@
 	<style>
 		@font-face {
 		    font-family: 'bodoni';
-		    src: url('https://ewonrael.github.io/whatisarttoyou/Bodoni.ttf') format('ttf');
+		    src: url('https://ewonrael.github.io/whatisarttoyou/Bodoni.ttf') format('truetype');
 		    font-weight: normal;
 		    font-style: normal;
 
