--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -11,8 +11,14 @@
 		    font-style: normal;
 
 		}
+		body {
+			background-color: #2e3e7d;
+		}
 		h2 {
 			font-family: "bodoni"; 
+			font-weight: normal;
+			color: #c9cdea;
+			text-align: center;
 		}
 	</style>
   </head>
