--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -19,11 +19,11 @@
 			font-weight: normal;
 			color: #c9cdea;
 			text-align: center;
-			font-size: 2em;
+			font-size: 3em;
 		}
 	</style>
   </head>
   <body>
-    <h2>What is art?</h2>
+    <h2>What is art to you?</h2>
   </body>
 </html>
