--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -19,7 +19,8 @@
 			font-weight: normal;
 			color: #c9cdea;
 			text-align: center;
-			font-size: 3em;
+			font-size: 2.5em;
+			background-color: red;
 		}
 	</style>
   </head>
