--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -21,6 +21,7 @@
 			text-align: center;
 			font-size: 2.5em;
 			background-color: red;
+			float: center;
 			position: absolute;
 		}
 	</style>
