--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -27,6 +27,9 @@
 	</style>
   </head>
   <body>
-    <h2>What is art to you?</h2>
+  	<h2>What is art to you?</h2>
+	<div id="center">
+		<h1>CHANGE ME</h1>
+	</div>
   </body>
 </html>
