--- a/whatisarttoyou/10.html
+++ b/whatisarttoyou/10.html
@@ -75,7 +75,7 @@
   	<h2><a href="https://EwonRael.github.io/whatisarttoyou/random.html">What is art to you?</a></h2>
 	<div id="center">
 		<h1 id="quote">Well it is any expression of yourself really.<br><br>I make music and draw but it could be anything</h1>
-    <h3 id="by">- Kahnor</h3>
+    <h3 id="by">- Kahnor M.</h3>
 	</div>
   <p>Tinder matches answer "What is art to you?" &nbsp; | &nbsp; Made with love by <a href="https://ewonrael.github.io/">Owen Earl</a></p>
   </body>
