--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -3,6 +3,10 @@
 <html>
   <head>
 	<title>What is art to you?</title>
+	<script type="text/javascript">
+		var pageArr = ["01.htm", "02.htm", "03.htm", "04.htm"];
+		document.location.href = pageArr[Math.ceil(Math.random()*4)];
+	</script>
 	<style>
 		@font-face {
 		    font-family: 'bodoni';
