--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -4,7 +4,7 @@
   <head>
 	<title>What is art to you?</title>
 	<script type="text/javascript">
-		var pageArr = ["01.htm", "02.htm", "03.htm", "04.htm"];
+		var pageArr = ["01.htm", "02.html", "03.html", "04.html"];
 		document.location.href = pageArr[Math.ceil(Math.random()*4)];
 	</script>
 	<style>
