--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -4,8 +4,8 @@
   <head>
 	<title>What is art to you?</title>
 	<script type="text/javascript">
-		var pageArr = ["01.htm", "02.html", "03.html", "04.html"];
-		document.location.href = pageArr[Math.ceil(Math.random()*4)];
+		var pageArr = ["01.html", "02.html", "03.html", "04.html", "05.html", "06.html", "07.html", "08.html", "09.html", "10.html", "11.html", "12.html", "13.html", "14.html", "15.html"];
+		document.location.href = pageArr[Math.ceil(Math.random()*15)];
 	</script>
 	<style>
 		@font-face {
