--- a/whatisarttoyou/06.html
+++ b/whatisarttoyou/06.html
@@ -74,7 +74,7 @@
   <body>
   	<h2><a href="https://EwonRael.github.io/whatisarttoyou/random.html">What is art to you?</a></h2>
 	<div id="center">
-		<h1 id="quote">Expressionistis media</h1>
+		<h1 id="quote">Expressionistic media</h1>
     <h3 id="by">- Salem</h3>
 	</div>
   <p>Tinder matches answer "What is art to you?" &nbsp; | &nbsp; Made with love by <a href="https://ewonrael.github.io/">Owen Earl</a></p>
