--- a/index.html
+++ b/index.html
@@ -656,13 +656,13 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="https://ewonrael.github.io/whatisarttoyou">Art According to Tinder</a>
+	</p>
+	<p>
 		<a href="http://indestructibletype.com/Renner.html">Renner* 3.0</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.bandcamp.com/track/sacramento">Sacramento</a>
-	</p>
-	<p>
-		<a href="http://activities-index.github.io/">Activities Index</a>
 	</p>
 	<br><br>
 	<p>
@@ -748,6 +748,9 @@
 	</p>
 	<p>
 		<a href="https://www.youtube.com/watch?v=42o0ZpBYUdE&feature=youtu.be">Aesthetic Responses to Repetition in Unfamiliar Music</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.github.io/whatisarttoyou">Art According to Tinder</a>
 	</p>
 	<div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0" style="-webkit-filter: url(#monochrome); filter: url(#monochrome); opacity: 0.95;"></iframe></div>
 	<p>
