--- a/index.html
+++ b/index.html
@@ -760,6 +760,9 @@
 		<a href="https://youtu.be/6sPEavkcXfk">Interview with John Cage on Silence</a>
 	</p>
 	<p>
+		<a href="http://www.uroulette.com/visit/oqroos">Literally Some Random Page on the Internet (Stolen)</a>
+	</p>
+	<p>
 		<a href="https://youtu.be/gCYURbW1o-E">The Naming of Creation</a>
 	</p>
 	<p>
