--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "today is a day of bad luck!<br>I'm sorry to everyone who has had or will have bad luck today!",
+		      "I find house-made ketchup pretentious",
+		      "Now I'm 20% woman 80% hookworms, and I'm suing Burger King for $50 million.",
+		      "i feel so honored, becky.",
+		      "things that automatically make you a better person than me:<br><br>boycotting Nestlé<br>knowing how to use a hammer<br>being bilingual<br>paying for the NYT<br>being vegan<br>having an IRA maybe<br>exercising sometimes",
+		      "Pocaloquitos-style Meat Saucers Forced into a Cheddar Coffin",
+		      "real fan of the bisexual agenda",
+		      "yeah like lucid dreaming is cool and all but have you ever tried lucid awaking because it's terrible",
+		      "it's delicious to forgive icebox at you",
+		      "I keep hoping that they've finally killed that jerk romance but then I read headlines. How does she keep rising from the dead?",
+		      "I think about the movies Cars 2 more than pretty much any other movie",
+		      "I didn't just invent tomatoes",
+		      "jipotliea",
+		      "Investigation of the Question Whether in a Judgement of Taste the Feeling of Pleasure Precedes the Judging of the Object or the Judging Precedes the Pleasure",
+		      "my incompetence amazes even me sometimes",
+		      "I'm going to open a restaurant called &ldquo;salted caramel&rdquo; and everything on the menu will either be covered in salt or caramel",
+		      "sitting in the bathroom stall, listening to the deep sighs of the man next to me<br><br>boi I feel it",
+		      "I don't really want to be traumatized for life today so I think I'm going to go eat a pork bun and wait it out",
+		      "I want one of those &ldquo;student diver&rdquo; cars so people will judge me less",
+		      "if you smoked married iguanas unfriend me 🙁",
+		      "assuming we're able to keep it, future historians will have an incredible insight into the daily life's of people during this time period due to social media",
+		      "I'm into orange juice",
+		      "Are we human, or are we fish-people/dancer?",
+		      "LPT: get free coffee by applying for jobs you have no interest in having and accepting the free drink they give you at interviews",
 		      "I miss you and I love you",
 		      "Peter Pan: hey Wendy don't ever grow up come with me <br>Wendy: okay <br>Peter Pan: I need you to mother like 30 boys for me",
 		      "nobody understands my Guinness",
