--- a/whatisarttoyou/random.html
+++ b/whatisarttoyou/random.html
@@ -4,8 +4,8 @@
   <head>
 	<title>What is art to you?</title>
 	<script type="text/javascript">
-		var pageArr = ["01.html", "02.html", "03.html", "04.html", "05.html", "06.html", "07.html", "08.html", "09.html", "10.html", "11.html", "12.html", "13.html", "14.html", "15.html", "16.html", "17.html", "18.html", "19.html"];
-		document.location.href = pageArr[Math.ceil(Math.random()*19)];
+		var pageArr = ["01.html", "02.html", "03.html", "04.html", "05.html", "06.html", "07.html", "08.html", "09.html", "10.html", "11.html", "12.html", "13.html", "14.html", "15.html", "16.html", "17.html", "18.html", "19.html", "20.html", "21.html", "22.html"];
+		document.location.href = pageArr[Math.ceil(Math.random()*22)];
 	</script>
 	<style>
 		@font-face {
