--- a/index.html
+++ b/index.html
@@ -11,6 +11,58 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "I'm not taking fashion, I'm talking shoes",
+		      "I'm not saying that I think Elvis Presley is a bad musician, but let's just say that if Elvis and a bad musician were downing I'd save the bad musician but mostly that's because Elvis is already dead and I'm not saving no zombie Elvis",
+		      "listening to George Washington's advise is kind of a 50% 50% enterprise",
+		      "my daughter, the giant white rabbit that sleeps in the guest shower",
+		      "the mind is a mental torture chamber but at least it's your mental torture chamber",
+		      "&ldquo;Purple Rain&rdquo; is about the U.S. military's lead iodide cloud seeding experiments in Laos",
+		      "there are only books about aliens",
+		      "is Kurt Cobain the Kurt Cobain of the nineties?",
+		      "you are my sad fast baby and I am your prisoner",
+		      "relatable joke about coffee",
+		      "watching YouTube Rewind: <br>I don't recognize any of these peop- oh hey it's the Walmart boy",
+		      "Gladly, the cross-eyed bear",
+		      "looking for someone to venmo me $30,000 real quick",
+		      "eggs is only collectively dated",
+		      "Annie Oakley would like a medium size boy that is easily board by moon rocks",
+		      "I need to to appreciate the concept of a shoebox as if it were a joke. Not that it's funny, but that it conceptually resembles a joke.",
+		      "&ldquo;In C 2&rdquo; was just a money grab, man",
+		      "I've had 6 exorcisms this year and still feel the same",
+		      "not into sexual tension because honestly any kind of tension is stressful to me",
+		      "does anyone have a cockroach or cicada costume I can borrow real quick??",
+		      "ha ha, meme-erisms",
+		      "̵̏ͮ̐ͭ͌̕̕͠ ̵̧̧̡̾͗̏͛ͪ̾ ͦ͆̌̌̒ͩͣ̓̾ͣ͋͒̽̕҉͠ ̏̔ͦ̑̅̊̉̉ͪ̀ͮ̄ͨ̿̈̾ͤͪ́̚҉̴͡͏ ̷̶̴ͣ́̐ͩ̀͠ ͐͆ͭ̓̓ͬ́̎̌̃̂̄̏̓͜͟ ̡͑̾ͫͣ̊ͬ̂̉͌͂ͫͩ́͘͢͠ ̶̃̀̾̅̍̊̽̎̈́̐̕͝ ̨̽ͣͨ̉ͥͫ̇͑͗͟ ̸̵̏̔̓͊̋̆̐̆̔͊͊͋͗ͯ ̴ͪͫͩ̎͛ͫͭͨ̋ͦ̇͜ ̶ͥͫ̂͐̾͆͑ͪͣ͢͟͡ ͪ͋ͦ̅͐̾ͣ̓̿̑̋̽ͧͭ͊̋ͩͪ͏̨͘ ̡ͭ̃͒ͯͭ͆ͯ̈́ͯͣ̄͐ͯ̊͜͠҉͠ ̀ͬ̍̎ͭ̽͛ͮ͐̆̆ͬ͌͆ͫ͑ͯ͘ ̐ͧ̏ͩ́͘҉̡ ̴̴̡̐̄̊̋̐͘͝ ̅̎͂̇̐̋̾̄",
+		      "😂😀🙂😕🙁☹️😔",
+		      "I've started playing along with spam calls about my car's extended warranty or whatever and they keep hanging up on me? Like I just got a call about chronic pain medication and the woman asked if she was speaking to Owen and I said yes and she hung up. How does this scam work?",
+		      "Yes, yes, my old friend, I'm not the only river. I'm not afraid I'm a song And you",
+		      "it's been a while",
+		      "OF <br>OUT <br>ORDER",
+		      "Nintendo 64 controller looks like a goose, which is the fastest until it's over",
+		      "if you ever think to yourself &ldquo;well that went well&rdquo; it's probably because it did",
+		      "they don't build ruins like they used to",
+		      "if Team Snapchat is too good for Bitmoji then so am I",
+		      "I only have one opportunity to stand in a empty pastel blue room everyday, and that opportunity comes at 7:00 am. Once I leave the room disappears forever.",
+		      "chocolate factory tour guide: here&#39;s an important part of the chocolate making process. <br><br>*opens door to room full of middle aged men in chef toques squinting proudly at chocolate* <br><br>chocolate factory tour guide: you may recognize this from our adverts.",
+		      "I&#39;m a vacuum cleaner",
+		      "probably not the best fit for the job",
+		      "conceptual gays like maths <br>concrete gays like science",
+		      "ビープ音レタス",
+		      "I'm not the kind of woman to shiver for just no reason",
+		      "I would trust just about anyone with my life; it's the little things that I trust very few with",
+		      "2666",
+		      "if it weren't for disappointment I'd never have any appointment",
+		      "two months ago I was from the future and now I am in the world's backyard",
+		      "boots so small they can be seen by the naked eye",
+		      "I don't like sand. It's coarse and rough and irritating and it gets everywhere.",
+		      "you never had a sandwich",
+		      "my &ldquo;friend&rdquo; wants to know if they can bring a wooden plank with a smiley face sharpied into it as a carry @TSA",
+		      "moderation should be taken to excess",
+		      "Do you know what doubt is?",
+		      "no such thing as a sustainable bossiness model",
+		      "the &ldquo;this is so sad Alexa play Despacito&rdquo; meme evokes a deep emotional response in me",
+		      "I just want to be loved",
+		      "I can't tell if I'm the Steve Jobs or the Steve Wozniak in this relationship",
 		      "today is a day of bad luck!<br>I'm sorry to everyone who has had or will have bad luck today!",
 		      "I find house-made ketchup pretentious",
 		      "Now I'm 20% woman 80% hookworms, and I'm suing Burger King for $50 million.",
