--- a/index.html
+++ b/index.html
@@ -732,13 +732,13 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="https://ewonrael.bandcamp.com/album/im-harry-potter">I'm Harry Potter</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.bandcamp.com/album/making-the-memories-happen">Making the Memories Happen</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/whatisarttoyou">Art According to Tinder</a>
-	</p>
-	<p>
-		<a href="http://indestructibletype.com/Renner.html">Renner* 3.0</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.bandcamp.com/track/sacramento">Sacramento</a>
 	</p>
 	<br><br>
 	<p>
@@ -788,6 +788,12 @@
 		<a href="https://ewonrael.bandcamp.com/album/flii">Flii</a>
 	</p>
 	<p>
+		<a href="https://ewonrael.bandcamp.com/album/im-harry-potter">I'm Harry Potter</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.bandcamp.com/album/making-the-memories-happen">Making the Memories Happen</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.bandcamp.com/track/mark-ferrari-bridge-water-city">Mark Ferrari (BRIDGE WATER CITY)</a>
 	</p>
 	<p>
@@ -834,9 +840,6 @@
 	</p>
 	<p>
 		<a href="https://youtu.be/6sPEavkcXfk">Interview with John Cage on Silence</a>
-	</p>
-	<p>
-		<a href="http://www.uroulette.com/visit/oqroos">Literally Some Random Page on the Internet (Stolen)</a>
 	</p>
 	<p>
 		<a href="https://youtu.be/gCYURbW1o-E">The Naming of Creation</a>
