--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
 	<h2 id="tweet"></h2>
   	<script>
 	(function() {
-	      var tweets = [
+	      var tweet's = [
+		      "what is a poem?",
+		      "I gotta quit my habit of eating cold turkey",
+		      "never know which of those buttons on the toilet are for pee like maybe it's the little one because I want it to flush less water but maybe it's the big one because you're going to use it more often so it should be easier to push and why is one blue what does that mean?",
+		      "oof",
+		      "To business that we love rise bedtime, And go to't with delight.",
+		      "I'm not buying a cat just so I can write a screenplay",
+		      "I really don't trust TED talks",
+		      "apparently all you've learned in the months since we talked is a condescending British affect as you tell me I'm not doing enough to pursue my dreams",
+		      "911 what is your emergency? <br>WE HAVE BEEN TRYING TO REACH YOU REGARDING YOUR CAR'S EXTENDED WARRANTY. YOU SHOULD HAVE RECEIVED SOMETHING IN THE MAIL REGARDING YOUR CAR'S EXTENDED WARRANTY. THIS IS YOUR FINAL COURTESY CALL BEFORE YOUR FILE IS REMOVED AND YOUR ACCOUNT IS DELETED.",
+		      "Summer school. The grass hut was set ablaze by airplanes. Children watched in awe. We learned many practical skills.",
+		      "The killer locked us in a house full of traps. I volunteered to navigate the traps alone because of my ability to undo mistakes. When we escaped it was night and I was covered in blood. We spent an hour arguing about which car to take to the hospital.",
+		      "You were driving the car in the rain. The car was full of furniture. There was no room to sit so I was kind of lying on my back. I had my laptop with me and was composing that day's cowboy song. You parked in front of the American Furniture Warehouse next to the Jamba Juice.",
+		      "I snuck into a millennial workplace. I don't actually work here I'm just here for the coffee.",
+		      "I'm a spy who needs to convince the world that I'm an illusionist in order to get an in with the watercolor painter",
+		      "I know this to be untrue, but it's a belief I hold with as much conviction as any truth",
+		      "the only thing that can prevent the spontaneous annihilation of the universe is the simultaneity of a group of elders hooking up and many vw bug car alarms sounding",
+		      "also the WTFPL is copyrighted which is the most bogus",
+		      "I was in the grocery store again. <br>Matt Damon solved the Palestinian/Israel conflict. <br>The vacuum of Velveeta.",
+		      "I think breads should be the inside joke of the year",
+		      "you would think the human species for all its technological achievements could figure out how to make a string of Christmas lights that doesn't go out",
+		      "check out my new single",
+		      "I can't wait until you meet your maladjusted doppelganger",
+		      "&ldquo;Unchies&rdquo; means to force-feed a goose yoghurt",
+		      "Spiderman was my father",
+		      "#ButterMeUpSamuel",
+		      "I miss you @cdzamusic",
+		      "just because you're capable of failure doesn't mean you are a failure",
 		      "I'm not taking fashion, I'm talking shoes",
 		      "I'm not saying that I think Elvis Presley is a bad musician, but let's just say that if Elvis and a bad musician were downing I'd save the bad musician but mostly that's because Elvis is already dead and I'm not saving no zombie Elvis",
 		      "listening to George Washington's advise is kind of a 50% 50% enterprise",
