--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2 id="tweet"></h2>
   	<script>
 	(function() {
-	      var tweet's = [
+	      var tweets = [
 		      "what is a poem?",
 		      "I gotta quit my habit of eating cold turkey",
 		      "never know which of those buttons on the toilet are for pee like maybe it's the little one because I want it to flush less water but maybe it's the big one because you're going to use it more often so it should be easier to push and why is one blue what does that mean?",
