--- a/index.html
+++ b/index.html
@@ -759,13 +759,13 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="https://indestructibletype.com/Bodoni.html">Bodoni*</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.bandcamp.com/album/im-harry-potter">I'm Harry Potter</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.bandcamp.com/album/making-the-memories-happen">Making the Memories Happen</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.github.io/whatisarttoyou">Art According to Tinder</a>
 	</p>
 	<br><br>
 	<p>
@@ -841,6 +841,9 @@
 	</p>
 	<p>
 		<a href="http://indestructibletype.com/Besley">Besley*</a>
+	</p>
+	<p>
+		<a href="https://indestructibletype.com/Bodoni.html">Bodoni*</a>
 	</p>
 	<p>
 		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
