--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
 		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
 	</p>
 	<p>
-		<a href="http://indestructibletype.com/Renner">Renner*</a>
+		<a href="http://indestructibletype.com/Jost">Jost*</a>
 	</p>
 	<br><br>
 	<p>
