--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
 	<p>
 		<a href="https://ewonrael.github.io/whatisarttoyou">Art According to Tinder</a>
 	</p>
-	<a href="facebook.com"><div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0" style="-webkit-filter: url(#monochrome); filter: url(#monochrome); opacity: 0.95;"></iframe></div></a>
+	<a href="http://www.facebook.com"><div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0" style="-webkit-filter: url(#monochrome); filter: url(#monochrome); opacity: 0.95;"></iframe></div></a>
 	<p>
 		<a href="https://goo.gl/FaUzwX">The Incomplete Works of Dr. Earl</a>
 	</p>
