--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "I bet crayons is work well in space",
+		      "be the kind of person that has a lot of good icebreakers",
+		      "a white person being afraid of brown people is not the same as a brown person being afraid of white people",
+		      "god I hope I don't get reincarnated as a sentient chickpea",
+		      "foods that is probably fake: <br>tuna fish (while in NYC) <br>parmesan cheese <br>wasabi <br>extra virgin olive oil <br>IKEA meatballs",
+		      "what's the going scientific consensus on why cats want to stand half outside?",
+		      "my brain when I'm trying to sleep: *thinking about stressful things* <br><br>me: I need to think about something less stressful <br><br>my brain: *thinking about tortellini in a stressful manner*",
+		      "I always wave goodbye at people when I hang up the phone",
+		      "what did the Catholic hedgehog say about the international space station?",
+		      "have you guys tried coffee yet it's disgusting I love it",
+		      "&ldquo;objectivity&rdquo; is the new &ldquo;literally&rdquo;",
+		      "is E.T. the original manic pixie daydream?",
+		      "I was young and hip once",
+		      "&ldquo;indescribable&rdquo; is wrong",
+		      "keep waking up with Christmas carols suck in my head",
+		      "I hold my pants up and jump into them when I get dressed that way when I'm rich and famous people will say I &ldquo;put my pants on one leg at a time just like everyone else&rdquo; and I'll secretly know that they're wrong",
+		      "where can I buy an &ldquo;emotional support human&rdquo; vest?",
+		      "real phyced for the Dora the Explorer movie",
+		      "everything is like astrology for someone",
+		      "spork is the interrobang of utensils",
+		      "once sat next to a girl with a Helvetica tattoo and the fact that I didn't talk to her still haunts me",
+		      "wasting my life is taking forever",
+		      "I'm wandering around an unregulated collection of seedy business in this densely packed skyscraper",
+		      "I have met the press, and I was deeply disappointed",
+		      "I forgot I was signed up for highschool choir until the bus came for me the day of the show!",
+		      "My dad woke up with a door installed in his shirt. We couldn't open it because it was fake, so we had to use a screwdriver to uninstall the doorknob.",
+		      "organized pants or machine learning <br><br>pick one",
+		      "look at me I'm drawing faces with my hands like it's 1543",
+		      "&ldquo;where were you last night‽ who were you with‽&rdquo; -me questioning my sexuality",
+		      "life rage gag raw",
+		      "the human mind has no floor",
+		      "if Opera is high art we're all doomed",
+		      "That's in realism a allotment of Edwin Herbert Land cognitive content. The construct unspoken to the postmodernist thought of a priori knowledge bows from a fact experience to point writing classifications.",
 		      "what is a poem?",
 		      "I gotta quit my habit of eating cold turkey",
 		      "never know which of those buttons on the toilet are for pee like maybe it's the little one because I want it to flush less water but maybe it's the big one because you're going to use it more often so it should be easier to push and why is one blue what does that mean?",
@@ -758,14 +791,14 @@
 	<p>
 		<b>Recent Activity</b>
 	</p>
+	 <p>
+		<a href="https://ewonrael.github.io/message%20in%20a%20bottle/home.html">Message in a Bottle</a>
+	</p>
 	<p>
 		<a href="https://indestructibletype.com/Bodoni.html">Bodoni*</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.bandcamp.com/album/im-harry-potter">I'm Harry Potter</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.bandcamp.com/album/making-the-memories-happen">Making the Memories Happen</a>
 	</p>
 	<br><br>
 	<p>
@@ -870,6 +903,9 @@
 	</p>
 	<p>
 		<a href="https://youtu.be/6sPEavkcXfk">Interview with John Cage on Silence</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.github.io/message%20in%20a%20bottle/home.html">Message in a Bottle</a>
 	</p>
 	<p>
 		<a href="https://youtu.be/gCYURbW1o-E">The Naming of Creation</a>
