--- a/message in a bottle/about.html
+++ b/message in a bottle/about.html
@@ -10,14 +10,14 @@
 		<div id="body">
 			<h2>ABOUT</h2>
 			<p><i>If you wish to send a message, to a stranger far,<br>
-			And you’re thinking of a bottle, or perhaps a jar,<br>
-			Then friend your transit’s ineffective, there’s better means by now,<br>
-			The new way you can do from home, if you just know how!</p>
+			and you’re thinking of a bottle, or perhaps a jar,<br>
+			then friend, your transit’s ineffective, there’s better means by now,<br>
+			the new way you can do from home, if you just know how!</p>
 			<p>
-			I’ll start by asking you ten questions, the answers should intend,<br>
-			To illuminate your person, once finished I will send,<br>
-			Your answers to the next brave soul, who answers questions ture,<br>
-			And in return I’ll send the prior, answer’s note to you.</i></p>
+			I’ll start by asking you ten questions; the answers should intend<br>
+			to illuminate your person. Once finished I will send<br>
+			your answers to the next brave soul, who answers questions true,<br>
+			and in return I’ll send the prior's answers on to you.</i></p>
 			<br>
 			<a href="send.html"><h2 id="c">WRITE YOUR MESSAG<span>E</span></h2></a>
 		</div>
