--- a/message in a bottle/about.html
+++ b/message in a bottle/about.html
@@ -15,9 +15,9 @@
 			the new way you can do from home, if you just know how!</p>
 			<p>
 			I’ll start by asking you ten questions; the answers should intend<br>
-			to illuminate your person. Once finished I will send<br>
+			to illuminate your person; once finished I will send<br>
 			your answers to the next brave soul, who answers questions true,<br>
-			and in return I’ll send the prior's answers on to you.</i></p>
+			and in return I’ll send the prior, answer’s note to you.</i></p>
 			<br>
 			<a href="send.html"><h2 id="c">WRITE YOUR MESSAG<span>E</span></h2></a>
 		</div>
