--- a/Alphabet/C.html
+++ b/Alphabet/C.html
@@ -14,7 +14,7 @@
 			<img src="resource/C.svg">
 			<div>
 				<h1 id="colorC">Chris Earl</h1>
-				<p>taught me how to nerd out.</p>
+				<p>(my dad) taught me how to love.</p>
 			</div>
 		</div>
 		<br><br>
