--- a/Alphabet/E.html
+++ b/Alphabet/E.html
@@ -14,7 +14,7 @@
 			<img src="resource/E.svg">
 			<div>
 				<h1 id="colorE">Esa Hall</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to talk to strangers.</p>
 			</div>
 		</div>
 		<br><br>
