--- a/Alphabet/F.html
+++ b/Alphabet/F.html
@@ -14,7 +14,7 @@
 			<img src="resource/F.svg">
 			<div>
 				<h1 id="colorF">Frank Kowalsky</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to cook.</p>
 			</div>
 		</div>
 		<br><br>
