--- a/Alphabet/G.html
+++ b/Alphabet/G.html
@@ -14,7 +14,7 @@
 			<img src="resource/G.svg">
 			<div>
 				<h1 id="colorG">Sage Guyton</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to be a cowboy.</p>
 			</div>
 		</div>
 		<br><br>
