--- a/Alphabet/H.html
+++ b/Alphabet/H.html
@@ -14,7 +14,7 @@
 			<img src="resource/H.svg">
 			<div>
 				<h1 id="colorH">Helen Earl</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to pursue the magic in the world.</p>
 			</div>
 		</div>
 		<br><br>
