--- a/Alphabet/I.html
+++ b/Alphabet/I.html
@@ -14,7 +14,7 @@
 			<img src="resource/I.svg">
 			<div>
 				<h1 id="colorI">Myself</h1>
-				<p>taught me how to nerd out.</p>
+				<p>I taught myself how to be self-motivated.</p>
 			</div>
 		</div>
 		<br><br>
