--- a/Alphabet/J.html
+++ b/Alphabet/J.html
@@ -14,7 +14,7 @@
 			<img src="resource/J.svg">
 			<div>
 				<h1 id="colorJ">Jude Stabiler</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to nurture the special.</p>
 			</div>
 		</div>
 		<br><br>
