--- a/Alphabet/K.html
+++ b/Alphabet/K.html
@@ -14,7 +14,7 @@
 			<img src="resource/K.svg">
 			<div>
 				<h1 id="colorK">Katya Castillo</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how share my feelings.</p>
 			</div>
 		</div>
 		<br><br>
