--- a/Alphabet/M.html
+++ b/Alphabet/M.html
@@ -14,7 +14,7 @@
 			<img src="resource/M.svg">
 			<div>
 				<h1 id="colorM">Madeline Gordon</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to move forward.</p>
 			</div>
 		</div>
 		<br><br>
