--- a/Alphabet/N.html
+++ b/Alphabet/N.html
@@ -14,7 +14,7 @@
 			<img src="resource/N.svg">
 			<div>
 				<h1 id="colorN">Nicholas Mackelprang</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to be inspired.</p>
 			</div>
 		</div>
 		<br><br>
