--- a/Alphabet/O.html
+++ b/Alphabet/O.html
@@ -13,8 +13,8 @@
 		<div id="click">
 			<img src="resource/O.svg">
 			<div>
-				<h1 id="colorA">Oma</h1>
-				<p>taught me how to nerd out.</p>
+				<h1 id="colorO">Oma</h1>
+				<p>taught me how to commit to my beliefs.</p>
 			</div>
 		</div>
 		<br><br>
