--- a/Alphabet/P.html
+++ b/Alphabet/P.html
@@ -14,7 +14,7 @@
 			<img src="resource/P.svg">
 			<div>
 				<h1 id="colorP">Polina Perelstein</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to have difficult conversations.</p>
 			</div>
 		</div>
 		<br><br>
