--- a/Alphabet/Q.html
+++ b/Alphabet/Q.html
@@ -14,7 +14,7 @@
 			<img src="resource/Q.svg">
 			<div>
 				<h1 id="colorQ">Steve Quester</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to protest.</p>
 			</div>
 		</div>
 		<br><br>
