--- a/Alphabet/R.html
+++ b/Alphabet/R.html
@@ -14,7 +14,7 @@
 			<img src="resource/R.svg">
 			<div>
 				<h1 id="colorRs">Madison Reynolds</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to accept people as they are.</p>
 			</div>
 		</div>
 		<br><br>
