--- a/Alphabet/S.html
+++ b/Alphabet/S.html
@@ -14,7 +14,7 @@
 			<img src="resource/S.svg">
 			<div>
 				<h1 id="colorS">Pat Sheridan</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to be resilient.</p>
 			</div>
 		</div>
 		<br><br>
