--- a/Alphabet/T.html
+++ b/Alphabet/T.html
@@ -14,7 +14,7 @@
 			<img src="resource/T.svg">
 			<div>
 				<h1 id="colorT">Timothy Greenfield</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me the attractiveness of self love.</p>
 			</div>
 		</div>
 		<br><br>
