--- a/Alphabet/V.html
+++ b/Alphabet/V.html
@@ -14,7 +14,7 @@
 			<img src="resource/V.svg">
 			<div>
 				<h1 id="colorV">Eduardo Villegas</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me unrelenting optimism.</p>
 			</div>
 		</div>
 		<br><br>
