--- a/Alphabet/X.html
+++ b/Alphabet/X.html
@@ -14,7 +14,7 @@
 			<img src="resource/X.svg">
 			<div>
 				<h1 id="colorX">People of my Future</h1>
-				<p>taught me how to nerd out.</p>
+				<p>will someday teach me things I have yet to learn.</p>
 			</div>
 		</div>
 		<br><br>
