--- a/Alphabet/c.html
+++ b/Alphabet/c.html
@@ -14,7 +14,7 @@
 			<img src="resource/c.svg">
 			<div>
 				<h1 id="colorc">Chris Ferris</h1>
-				<p>taught me how to nerd out.</p>
+				<p>(my mom) taught me how to love.</p>
 			</div>
 		</div>
 		<br><br>
