--- a/Alphabet/home.html
+++ b/Alphabet/home.html
@@ -37,6 +37,7 @@
 			<a href="X.html"><div id="X"></div></a>
 			<a href="Y.html"><div id="Y"></div></a>
 			<a href="Z.html"><div id="Z"></div></a>
+			<br><a href="Zd.html"><div id="Zd"><img src="resource/Ah.svg"><img src="resource/Bh.svg"><img src="resource/Ch.svg"><img src="resource/ch.svg"><img src="resource/Dh.svg"><img src="resource/Eh.svg"><img src="resource/Fh.svg"><img src="resource/Gh.svg"><img src="resource/Hh.svg"><img src="resource/Ih.svg"><img src="resource/Jh.svg"><img src="resource/Kh.svg"><img src="resource/Lh.svg"><img src="resource/Mh.svg"><img src="resource/Nh.svg"><img src="resource/Oh.svg"><img src="resource/Ph.svg"><img src="resource/Qh.svg"><img src="resource/Rh.svg"><img src="resource/Sh.svg"><img src="resource/Th.svg"><img src="resource/Uh.svg"><img src="resource/Vh.svg"><img src="resource/Wh.svg"><img src="resource/Xh.svg"><img src="resource/Yh.svg"><img src="resource/Zh.svg"></div></a>
 		</div>
 		<br><br>
 		<p><a href="http://ewonrael.github.io/">made with love by Owen Earl</a></p>
