--- a/Alphabet/B.html
+++ b/Alphabet/B.html
@@ -14,7 +14,7 @@
 			<img src="resource/B.svg">
 			<div>
 				<h1 id="colorB">Bill Maxwell</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to tell stories.</p>
 			</div>
 		</div>
 		<br><br>
