--- a/Alphabet/L.html
+++ b/Alphabet/L.html
@@ -14,7 +14,7 @@
 			<img src="resource/L.svg">
 			<div>
 				<h1 id="colorL">Leo Earl</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to be bright and brave.</p>
 			</div>
 		</div>
 		<br><br>
