--- a/Alphabet/U.html
+++ b/Alphabet/U.html
@@ -14,7 +14,7 @@
 			<img src="resource/U.svg">
 			<div>
 				<h1 id="colorU">Uncle Ramsey McPhillips</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me that giving always comes back to you.</p>
 			</div>
 		</div>
 		<br><br>
