--- a/Alphabet/W.html
+++ b/Alphabet/W.html
@@ -14,7 +14,7 @@
 			<img src="resource/W.svg">
 			<div>
 				<h1 id="colorW">Emily Wells</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to be a rockstar.</p>
 			</div>
 		</div>
 		<br><br>
