--- a/Alphabet/Y.html
+++ b/Alphabet/Y.html
@@ -14,7 +14,7 @@
 			<img src="resource/Y.svg">
 			<div>
 				<h1 id="colorY">Yin</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me how to fend for myself.</p>
 			</div>
 		</div>
 		<br><br>
