--- a/Alphabet/Z.html
+++ b/Alphabet/Z.html
@@ -14,7 +14,7 @@
 			<img src="resource/Z.svg">
 			<div>
 				<h1 id="colorZ">Zoe Hays</h1>
-				<p>taught me how to nerd out.</p>
+				<p>taught me that I will always find kindness.</p>
 			</div>
 		</div>
 		<br><br>
