--- a/Alphabet/download.html
+++ b/Alphabet/download.html
@@ -5,17 +5,20 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="https://indestructibletype.com/fonts/fonts.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="style.css"/>
+		<script type="text/javascript">
+		function Redirect()
+		{
+				window.location="AlphabetOfTeachers.zip";
+		}
+		setTimeout('Redirect()', 1);
+		</script>
 	</head>
   <body>
     <h1><a href="home.html"><span id="colorA">A</span><span id="colorL">L</span><span id="colorP">P</span><span id="colorH">H</span><span id="colorA">A</span><span id="colorB">B</span><span id="colorE">E</span><span id="colorT">T</span><span id="colorO"> o</span><span id="colorF">f</span><span id="colorT"> T</span><span id="colorE">E</span><span id="colorA">A</span><span id="colorC">C</span><span id="colorH">H</span><span id="colorE">E</span><span id="colorR">R</span><span id="colorS">S</span></h1></a><br>
-		<a href="C.html"><div id="back"><h1>◀</h1></div></a>
-		<a href="E.html"><div id="forward"><h1>▶</h1></div></a>
-		<div id="click">
-			<img src="resource/D.svg">
-			<div>
-				<h1 id="colorD">Dina Ormenyi</h1>
-				<p>taught me how to play the piano.</p>
-			</div>
+		<div id="areas">
+			<h2><span id="colorD">D</span><span id="colorO">O</span><span id="colorW">W</span><span id="colorN">N</span><span id="colorL">L</span><span id="colorO">O</span><span id="colorA">A</span><span id="colorD">D</a></span></h2>
+			<p>Download should start automatically. If it doesn’t, <u><a href="AlphabetOfTeachers.zip">click here</u>.</a></p>
+			<p>Download includes svg images of each person, as well as a colorfont.</p>
 		</div>
 		<br><br>
 		<p><a href="http://ewonrael.github.io/">made with love by Owen Earl</a></p>
