--- a/Alphabet/try.html
+++ b/Alphabet/try.html
@@ -8,7 +8,7 @@
 	</head>
   <body>
     <h1 id="topw"><a href="home.html"><span id="colorA">A</span><span id="colorL">L</span><span id="colorP">P</span><span id="colorH">H</span><span id="colorA">A</span><span id="colorB">B</span><span id="colorE">E</span><span id="colorT">T</span><span id="colorO"> o</span><span id="colorF">f</span><span id="colorT"> T</span><span id="colorE">E</span><span id="colorA">A</span><span id="colorC">C</span><span id="colorH">H</span><span id="colorE">E</span><span id="colorR">R</span><span id="colorS">S</span></h1></a><br>
-		<div id="nosupport"><h2>YOUR BROWSER DOESN'T SUPPORT COLOR FONTS.</h2><p>Switch to the latest version of FireFox or Microsoft Edge to try.</p></div>
+		<div id="nosupport"><h2>YOUR BROWSER DOESN'T SUPPORT COLOR FONTS.</h2><p>Switch to the latest version of Firefox or Microsoft Edge to try.</p></div>
 		<div><div id="textarea" contentEditable="true">try</div></div>
 		<br><br>
 		<p><a href="http://ewonrael.github.io/">made with love by Owen Earl</a></p>
