--- a/Alphabet/about.html
+++ b/Alphabet/about.html
@@ -10,7 +10,7 @@
     <h1><a href="home.html"><span id="colorA">A</span><span id="colorL">L</span><span id="colorP">P</span><span id="colorH">H</span><span id="colorA">A</span><span id="colorB">B</span><span id="colorE">E</span><span id="colorT">T</span><span id="colorO"> o</span><span id="colorF">f</span><span id="colorT"> T</span><span id="colorE">E</span><span id="colorA">A</span><span id="colorC">C</span><span id="colorH">H</span><span id="colorE">E</span><span id="colorR">R</span><span id="colorS">S</span></h1></a><br>
 		<div id="areas">
 			<h2><span id="colorA">A</span><span id="colorB">B</span><span id="colorO">O</span><span id="colorU">U</span><span id="colorT">T</span></h2>
-			<p>All of us have teachers, friends and family who help us to become the people that we are. I wanted to celebrate the people in my life who have taught me throughout the years, by making an alphabet of teachers. For every letter, I thought of someone who has helped to shape me as a person. I then made a colorful representation of that person. Together, they form my Alphabet of Teachers.</p>
+			<p>All of us have teachers, friends and family who help us to become the people who we are. I wanted to celebrate the people in my life who have taught me throughout the years, by making an alphabet of teachers. For every letter, I thought of someone who has helped to shape me as a person. I then made a colorful representation of that person. Together, they form my Alphabet of Teachers.</p>
 			<p>Download includes svg images of each person, as well as a colorfont.</p>
 		</div>
 		<br><br>
